# Learning_CPP

./: .gitignore  README.md
22_1_task_WordFinder/: 22_1_task_WordFinder.cpp  README.md  words.txt
22_2_task_Registry/: 22_2_task_Registry.cpp  README.md
22_2_task_TextViewer/: 22_2_task_TextViewer.cpp  README.md  file.txt
22_3_task_Anagramm/: 22_3_task_Anagramm.cpp  README.md
22_3_task_TableReader/: 22_3_task_TableReader.cpp  README.md  table.txt
22_4_task_PNGDetector/: 22_4_task_PNGDetector.cpp  README.md
22_5_task_Phonebook/: 22_5_task_Phonebook.cpp  README.md
23_1_task_AdvancedDayOfWeek/: 23_1_task_AdvancedDayOfWeek.cpp  README.md
23_1_task_InputDatabase/: 23_1_task.cpp  README.md  database.txt
23_2_task_DrawPicture/: 23_2_task_DrawPicture.cpp  README.md  pic.txt
23_2_task_WagonFillingAnalyze/: 23_2_task_WagonFillingAnalyze.cpp  CMakeLists.txt  README.md
23_3_task_Fishing/: 23_3_task_Fishing.cpp  README.md  basket.txt  river.txt
23_3_task_Season/: 23_3_task_Season.cpp  CMakeLists.txt  README.md
23_4_task_ATM/: 23_4_task_ATM.cpp  README.md
24_1_task_RecordSheet/: 24_1_task_RecordSheet.cpp  README.md  recordsheet.txt
24_1_task_TimeManage/: 24_1_task_TimeManage.cpp  CMakeLists.txt  README.md
24_2_task_BirthdayReminder/: 24_2_task_BirthdayReminder.cpp  README.md
24_2_task_Village/: 24_2_task_Village.cpp  README.md
24_3_task_MathVector/: 24_3_Math_Vector.cpp  README.md
24_3_task_Timer/: 24_3_task_Timer.cpp  README.md
24_4_task_RoleplayGame/: 24_4_task_RoleplayGame.cpp  README.md
25_1_task_SurgerySimulator/: CMakeLists.txt  README.md  dot.h  instruments.h  main.cpp
25_1_task_SurgerySimulator/src/: CMakeLists.txt
25_2_task_ComputerSimulator/: CMakeLists.txt  README.md
25_2_task_ComputerSimulator/include/: const.h  cpu.h  disk.h  gpu.h  kbd.h  pc.h  ram.h
25_2_task_ComputerSimulator/src/: CMakeLists.txt  const.cpp  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
26_1_task_AudioplayerSimulator/: CMakeLists.txt  README.md
26_1_task_AudioplayerSimulator/include/: audioPlayer.h  clear.h  commands.h  date.h  track.h
26_1_task_AudioplayerSimulator/src/: CMakeLists.txt  audioPlayer.cpp  clear.cpp  commands.cpp  date.cpp  main.cpp  track.cpp
26_2_task_MobileSimulator/: CMakeLists.txt  README.md
26_2_task_MobileSimulator/include/: addressBook.h  clear.h  commands.h  contact.h
26_2_task_MobileSimulator/src/: CMakeLists.txt  addressBook.cpp  commands.cpp  contact.cpp  main.cpp
26_3_task_WindowControl/: CMakeLists.txt  README.md
26_3_task_WindowControl/include/: commands.h  window.h
26_3_task_WindowControl/src/: CMakeLists.txt  clear.cpp  commands.cpp  main.cpp  window.cpp
27_1_task_ElvenVillage/: CMakeLists.txt  README.md
27_1_task_ElvenVillage/include/: branch.h  clear.h  tree.h
27_1_task_ElvenVillage/src/: CMakeLists.txt  branch.cpp  clear.cpp  main.cpp  tree.cpp
27_2_task_GeometricFigure/: CMakeLists.txt  README.md
27_2_task_GeometricFigure/include/: figure.h
27_2_task_GeometricFigure/src/: CMakeLists.txt  clear.cpp  figure.cpp  main.cpp
27_3_task_CompanySimulator/: CMakeLists.txt  README.md
27_3_task_CompanySimulator/include/: company.h  employee.h
27_3_task_CompanySimulator/src/: CMakeLists.txt  company.cpp  employee.cpp  main.cpp
28_1_task_Swimming/: CMakeLists.txt  README.md
28_1_task_Swimming/include/: clear.h  swimmer.h
28_1_task_Swimming/src/: CMakeLists.txt  clear.cpp  main.cpp  swimmer.cpp
28_2_task_TrainStation/: CMakeLists.txt  README.md
28_2_task_TrainStation/include/: train.h
28_2_task_TrainStation/src/: clear.cpp  main.cpp  train.cpp
28_3_task_Restaurant/: README.md
28_3_task_Restaurant/include/: restaurant.h
28_3_task_Restaurant/src/: CMakeLists.txt
29_1_task_PetsMeeting/: README.md
30_1_task_UsersRequests/: CMakeLists.txt  README.md
30_1_task_UsersRequests/include/: httpbin.h
30_1_task_UsersRequests/src/: CMakeLists.txt  httpbin.cpp  main.cpp  supported.cpp
30_2_task_HeaderCatch/: CMakeLists.txt  README.md
30_2_task_HeaderCatch/src/: CMakeLists.txt  main.cpp
30_3_task_RequestsWithArguments/: CMakeLists.txt  README.md
30_3_task_RequestsWithArguments/include/: httpbin.h  supported.h
30_3_task_RequestsWithArguments/src/: CMakeLists.txt  httpbin.cpp  main.cpp
31_1_task_SharedPtrToy/: CMakeLists.txt  README.md
31_2_task_IGraph/: README.md
32_1_task_CreateJSON/: CMakeLists.txt  README.md  main.cpp
32_2_task_AnalyseJSON/: CMakeLists.txt  README.md  createJSON.cpp  main.cpp
32_2_task_AnalyseJSON/include/: createJSON.h
32_2_task_AnalyseJSON/src/: CMakeLists.txt  createJSON.cpp  main.cpp
32_3_task_Protobuf/: CMakeLists.txt  README.md  main.cpp  record.pb.cc  record.pb.h  record.proto
33_1_task_ShoppingBasket/: CMakeLists.txt  README.md
33_2_task_FishCatching/: CMakeLists.txt  README.md  main.cpp
33_3_task_ReestrOnTemplate/: CMakeLists.txt  README.md
33_4_task_AverageOnArray/: CMakeLists.txt  README.md  main.cpp
35_1_task_RangeBasedFor/: CMakeLists.txt  README.md  main.cpp
35_2_task_Lambda/: CMakeLists.txt  README.md  main.cpp
35_3_task_Filesystem/: CMakeLists.txt  README.md  main.cpp
36_1_task_Qt_Circle/: Qt_36_1_task_Circle.h  README.md  main.cpp
37_1_task_Qt_Calculator/: CMakeLists.txt  README.md  calc.cpp  calc.h  calc.qrc  calc.ui  main.cpp
37_2_task_Qt_QML_Mediaplayer/: CMakeLists.txt  README.md  icons.qrc  main.qml
37_3_task_Qt_RemoteController/: CMakeLists.txt  README.md  main.cpp  remoteController.cpp  remoteController.h  remoteController.ui
N_size_vector/: N_size_vector.cpp  vec.h
(+39 files in other folders)
