# CMakeList.txt: проект CMake для 23_2_task_WagonFillingAnalyze; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("23_2_task_WagonFillingAnalyze")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (23_2_task_WagonFillingAnalyze "23_2_task_WagonFillingAnalyze.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
