# CMakeList.txt: проект CMake для 24_1_task_TimeManage; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("24_1_task_TimeManage")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (24_1_task_TimeManage "24_1_task_TimeManage.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
